# closliapp

./: .AndroidManifest.xml.swp  AndroidManifest.xml  BUILD.gn
CLBidirectionRenderDemo/: gradle.properties
CLBidirectionRenderDemo/app/: build.gradle
java/com/closeli/demo/clbidirectionrenderdemo/: CLBIVideoDemoRemoteActivity.java  MainActivity.java
java/com/closeli/natives/: CLWebRtcNativeBinder.java
jni/: closeli_sdk_jni.cc
src/main/cpp/: native-lib.cpp
